# Hands-on-Machine-learning-with-C-Second-Edition

./: .clang-format  .gitignore  README.md
Chapter01/arrayfire_samples/: CMakeLists.txt  linalg_af.cc  linreg_af.cc
Chapter01/blaze_samples/: CMakeLists.txt  linalg_blaze.cc  linreg_blaze.cc
Chapter01/dlib_samples/: CMakeLists.txt  linalg_dlib.cc
Chapter01/eigen_samples/: CMakeLists.txt  linreg_eigen.cc
Chapter01/xtensor_samples/: CMakeLists.txt
Chapter02/csv/dlib/: CMakeLists.txt  csv_dlib.cc
Chapter02/csv/eigen/: csv.cc
Chapter02/csv/flashlight/: CMakeLists.txt  csv_fl.cc
Chapter02/csv/mlpack/: CMakeLists.txt  csv_mlpack.cc
Chapter02/data/: reviews.json
Chapter02/hdf5/: CMakeLists.txt  hdf5.cc
Chapter02/img/dlib/: CMakeLists.txt  img_dlib.cc
Chapter02/img/opencv/: CMakeLists.txt  ocv.cc
Chapter02/json/: CMakeLists.txt  json.cc  reviewsreader.cpp
Chapter03/dlib/: CMakeLists.txt  grid-dlib.cc
Chapter03/flashlight/: CMakeLists.txt  grid_fl.cc  search_optuna.py
Chapter03/mlpack/: CMakeLists.txt  grid-mlpack.cc
Chapter04/dlib/: CMakeLists.txt  dlib-cluster.cc
Chapter04/mlpack/: CMakeLists.txt  mlpack-cluster.cc
Chapter05/dlib/: CMakeLists.txt  dlib-anomaly.cc  isolation-forest.h
Chapter05/mlpack/: CMakeLists.txt  mlpack-anomaly.cc
Chapter06/dlib/: CMakeLists.txt  dlib-dr.cc
Chapter06/tapkee/: CMakeLists.txt  tapkee-dr.cc  util.cc  util.h
Chapter07/dlib/: CMakeLists.txt  dlib-classify.cc
Chapter07/flashlight/: CMakeLists.txt  fl_classify.cc
Chapter07/mlpack/: CMakeLists.txt  mlpack-classify.cc
Chapter08/eigen/: CMakeLists.txt  eigen_recommender.cc
Chapter08/mlpack/: CMakeLists.txt  mlpack_recommender.cc
Chapter08/mlpack/cmake/: Findmlpack.cmake
Chapter09/dlib/: CMakeLists.txt  dlib_ensemble.cc
Chapter09/mlpack/: CMakeLists.txt  mlpack_ensemble.cc  stacking.cc  stacking.h
Chapter10/dlib/: CMakeLists.txt
Chapter10/flashlight/: CMakeLists.txt  mlp_fl.cc
Chapter10/mlpack/: CMakeLists.txt  mlp_mlpack.cc
Chapter10/pytorch/: CMakeLists.txt  main.cpp
Chapter11/pytorch/: CMakeLists.txt  export.py  imdbdataset.cc  imdbdataset.h  imdbreader.cc  imdbreader.h  main.cpp  model.cpp  model.h  tokenizer.cc  tokenizer.h  vocab.txt
Chapter12/dlib/: CMakeLists.txt
Chapter12/flashlight/: CMakeLists.txt  fl_save.cc
Chapter12/mlpack/: CMakeLists.txt  mlpack-save.cc
Chapter12/onnxruntime/: CMakeLists.txt  main.cc
Chapter12/onnxruntime/model/: refs.txt
Chapter12/pytorch/: CMakeLists.txt  main.cc
Chapter13/flashlight/: CMakeLists.txt  fl_track.cc  mlflow.cc  mlflow.h
Chapter14/android_detection/: settings.gradle.kts
Chapter14/android_detection/app/: build.gradle.kts
Chapter14/android_detection/app/src/main/: AndroidManifest.xml
Chapter14/android_detection/app/src/main/assets/: classes.txt
Chapter14/android_detection/app/src/main/cpp/: CMakeLists.txt  detector.cpp  detector.h  log.h  native-lib.cpp  yolo.cpp  yolo.h
Chapter14/android_detection/app/src/main/java/com/example/objectdetection/: MainActivity.kt
Chapter14/android_detection/app/src/main/res/values/: strings.xml
Chapter14/android_detection/gradle/: libs.versions.toml
Chapter14/android_detection/gradle/wrapper/: gradle-wrapper.properties
build_scripts/: build_ch1.sh  build_ch10.sh  build_ch11.sh  build_ch12.sh  build_ch13.sh  build_ch14.sh  build_ch2.sh  build_ch3.sh  build_ch4.sh  build_ch5.sh  build_ch6.sh  build_ch7.sh  build_ch8.sh  build_ch9.sh
env_scripts/: README.md  dockerfile  install_android.sh  install_env.sh  install_lib_custom.sh  run_container.sh
